--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,6 @@ MACRO(ADD_SERVICES NAME PATH)
         MESSAGE(${NAME} " HEADER " ${ONE_SOURCE})
     ENDFOREACH()
 
-
     FOREACH(ONE_PATH ${ALL_PATH})
         target_include_directories(${NAME} PRIVATE ${ONE_PATH})
         MESSAGE(${NAME} " PRIVATE " ${ONE_PATH})
@@ -68,31 +67,28 @@ ENDMACRO()
 #GET_ALL(secureserver/open_proj 4 source)
 #GET_ALL(pimserver_svn/ 4 pimserver)
 
-include_directories(Taf_V3Beta02_Build002_B010/)
-include_directories(Taf_V3Beta02_Build002_B010/include)
-include_directories(Taf_V3Beta02_Build002_B010/include/jce)
-include_directories(Taf_V3Beta02_Build002_B010/include/util)
+include_directories(../Taf_V3Beta02_Build002_B010/include)
 
 #include_directories(tafjcedepend)
 #include_directories(rapidjson)
 #include_directories(faiss)
 
 #ADD_SERVICES(taf Taf_V3Beta02_Build002_B010/)
-ADD_SERVICES(RcmdDataSvr Recommend/RcmdDataSvr/trunk)
-ADD_SERVICES(DataDistributeSvr Recommend/DataDistributeSvr/trunk)
-ADD_SERVICES(SwPlatformServer Recommend/SwPlatformServer/trunk)
+ADD_SERVICES(RcmdDataSvr RcmdDataSvr/trunk)
+ADD_SERVICES(DataDistributeSvr DataDistributeSvr/trunk)
+ADD_SERVICES(SwPlatformServer SwPlatformServer/trunk)
 
-#ADD_SERVICES(VerifyCodeSvr Recommend/VerifyCodeServer/)
-#ADD_SERVICES(RTRcmdSvr Recommend/RTRcmdSvr/trunk)
-#ADD_SERVICES(DataCenterSvr Recommend/DataCenterSvr/trunk)
-ADD_SERVICES(RcmdSampleSvr Recommend/RcmdSampleSvr/trunk)
-#ADD_SERVICES(RcmdTrainSvr Recommend/RcmdTrainSvr/trunk)
-#ADD_SERVICES(RcmdPredictSvr Recommend/RcmdPredictSvr/trunk)
+#ADD_SERVICES(VerifyCodeSvr VerifyCodeServer/)
+#ADD_SERVICES(RTRcmdSvr RTRcmdSvr/trunk)
+#ADD_SERVICES(DataCenterSvr DataCenterSvr/trunk)
+ADD_SERVICES(RcmdSampleSvr RcmdSampleSvr/trunk)
+#ADD_SERVICES(RcmdTrainSvr RcmdTrainSvr/trunk)
+#ADD_SERVICES(RcmdPredictSvr RcmdPredictSvr/trunk)
 #ADD_SERVICES(faiss faiss)
-#ADD_SERVICES(FaissProxySvr Recommend/FaissProxySvr/trunk)
-#ADD_SERVICES(FaissWorkerSvr Recommend/FaissWorkerSvr/trunk)
-#ADD_SERVICES(RJLogicServer Recommend/RJLogicServer/trunk)
-#ADD_SERVICES(PhoneAttr Recommend/PhoneAttriServer)
+#ADD_SERVICES(FaissProxySvr FaissProxySvr/trunk)
+#ADD_SERVICES(FaissWorkerSvr FaissWorkerSvr/trunk)
+#ADD_SERVICES(RJLogicServer RJLogicServer/trunk)
+#ADD_SERVICES(PhoneAttr PhoneAttriServer)
 #ADD_SERVICES(IOSAppBackupSvr secureserver/open_proj/IOSAppBackupSvr)
 
 
